# AI_Cosplay

./: CMakeLists.txt  README.md  schema.sql  项目架构文档.md
HttpServer/: CorsMiddleware.cpp  HttpRequest.cpp  HttpServer.cpp  MiddlewareChain.cpp  Router.cpp  Session.cpp  SessionManager.cpp  SslConnection.cpp  SslContext.cpp
HttpServer/examples/: test_client.cc:Zone.Identifier
HttpServer/include/: CorsConfig.h  CorsMiddleware.h  HttpContext.h  HttpRequest.h  HttpResponse.h  HttpServer.h  Middleware.h  Router.h  RouterHandler.h  Session.h  SessionStorage.h  SslConfig.h  SslConnection.h
aichat/: CMakeLists.txt  server.cc
aichat/include/: AiChatHandler.h  AiChatServer.h  EntryHandler.h  History.h  LoginHandle.h  LogoutHandler.h  RegisterHandler.h  RoleStoryHandler.h  RoleinfoHandler.h  SaveHandle.h  Userinfo.h
aichat/src/: AiChatHandler.cpp  AiChatServer.cpp  CMakeLists.txt  EntryHandler.cpp  History.cpp  LoginHandler.cpp  Loginout.cpp  RegisterHandler.cpp  RoleStoryHandler.cpp  RoleinfoHandler.cpp  SaveHandle.cpp  UserInfo.cpp
source/: AIchat.html  config.json  entry.html  login.html
test/: CMakeLists.txt  testssl.cc
test/HttpServer/: CMakeLists.txt  HttpContext.cpp  HttpResponse.cpp  HttpServer.cpp  SessionStorage.cpp  SslConfig.cpp
test/HttpServer/include/: MiddlewareChain.h  SessionManager.h  SslContext.h  SslTypes.h
tools/: CMakeLists.txt  CommonConnectionPool.cpp  Connection.cpp
tools/include/: DbException.h
